tests/Fixtures/Torture/Bad/call_nonclass.g
// EXPECT G006
kernel { entry func Main() { let int n = 5; n.foo(); } }
